--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
   },
@@ -53,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.0.0",
     "@storybook/addon-actions": "^6.5.13",
     "@storybook/addon-essentials": "^6.5.13",
     "@storybook/addon-interactions": "^6.5.13",
@@ -67,6 +67,7 @@
     "babel-plugin-named-exports-order": "^0.0.2",
     "postcss": "^8.4.19",
     "prop-types": "^15.8.1",
+    "react-app-alias": "^2.2.2",
     "storybook": "^6.5.13",
     "tailwindcss": "^3.2.4",
     "webpack": "^5.75.0"
