--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
-  "compilerOptions": {
+  "extends": "./tsconfig.paths.json",
+    "compilerOptions": {
     "target": "es5",
     "lib": [
       "dom",
